se agrega funcionalidad comentarios

--- a/src/Styles/Soporte/Comentarios.module.css
+++ b/src/Styles/Soporte/Comentarios.module.css
@@ -83,10 +83,67 @@
 }
 
 .comentario {
+  width: 91.5%;
+  display: flex;
+  padding: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  border: 2px solid rgba(0, 53, 108, 1);
+  border-radius: 25px;
   animation: aparecer 2s;
-  margin-top: 2%;
+  margin-top: 0.5%;
+}
+
+.comentariosTilte {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  word-break: break-word;
+  margin-bottom: 1%;
   text-align: justify;
-  padding-right: 0.5%;
+}
+
+.info {
+  width: 90%;
+}
+
+.noComents {
+  font-size: 1.2vw;
+  color: rgba(0, 53, 108, 1);
+}
+
+.icon {
+  cursor: pointer;
+}
+
+.footerSection {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  color: rgb(101, 101, 101);
+}
+
+.marginLeft {
+  margin-left: 1%;
+}
+
+.editComent {
+  height: fit-content;
+  width: 10%;
+  border-right: 2px solid rgba(0, 53, 108, 1);
+  border-top: 2px solid rgba(0, 53, 108, 1);
+  border-bottom: 2px solid rgba(0, 53, 108, 1);
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
 
 .sendContainer {
@@ -125,4 +182,36 @@
 
 .send::placeholder {
   color: rgba(0, 53, 108, 1);
+}
+
+.inputDescription {
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 2%;
+  padding-right: 2%;
+  width: 100%;
+  font-family: sans-serif, "Manrope";
+  font-size: 1.3vw;
+  font-weight: 400;
+  border-radius: 10px;
+  border-bottom-right-radius: 0;
+  border: none;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+  color: rgba(0, 53, 108, 1);
+  resize: none;
+}
+
+.inputDescription:focus {
+  outline: 1px solid rgba(0, 53, 108, 1);
+}
+
+.inputDescription::placeholder {
+  color: rgba(0, 53, 108, 1);
+}
+
+.finishEdit {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
