se agrega boton para eliminar comentarios

--- a/src/Styles/Soporte/Comentarios.module.css
+++ b/src/Styles/Soporte/Comentarios.module.css
@@ -215,3 +215,31 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@keyframes deslizarAbajo {
+  0% {
+    top: -30%;
+  }
+  50% {
+    top: -30%;
+  }
+  100% {
+    top: 30%;
+  }
+}
+
+.eliminar {
+  animation: deslizarAbajo 2s;
+  z-index: 1000;
+  padding: 1%;
+  position: absolute;
+  top: 30%;
+  right: 2%;
+  background-color: white;
+  font-family: sans-serif, "Manrope";
+  font-size: 1vw;
+  color: rgba(0, 53, 108, 1);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  cursor: pointer;
+}
