--- a/src/Styles/Proyectos/Project.module.css
+++ b/src/Styles/Proyectos/Project.module.css
@@ -23,7 +23,7 @@
 }
 
 .projectContainerEdit {
-    width: 80%;
+    width: 60%;
     margin-top: 2%;
     display: flex;
     flex-direction: row;
@@ -31,10 +31,24 @@
     justify-content: flex-start;
 }
 
-.project,
+.project {
+    width: 300vh;
+    height: 30vh;
+    padding: 2%;
+    border-radius: 25px;
+    border: 2px solid rgba(0, 53, 108, 1);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    box-shadow: 3px 0px 3px rgba(0, 0, 0, 0.25);
+    z-index: 2;
+}
+
 .projectEdit {
-    width: 110%;
-    height: 25vh;
+    width: 180vh;
+    height: 40vh;
     padding: 2%;
     border-radius: 25px;
     border: 2px solid rgba(0, 53, 108, 1);
@@ -135,7 +149,16 @@
 .descripcion {
     width: 80%;
     text-align: justify;
-    font-weight: 400;
+    font-weight: 300;
+    font-size: 0.8em;
+    resize: none;
+    overflow-y: auto;
+    height:250px;
+    padding: 1%;
+}
+
+.descripcion::-webkit-scrollbar{
+    width: 1px;
 }
 
 .marginTop {
@@ -213,14 +236,20 @@
 .canceled {
     background-color: #ff0000;
 }
+.implementation {
+    background-color: blueviolet;
+}
+.dev {
+    background-color: #0085ff;
+}
 
 .item {
-    width: 100%;
+    width: 120%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    font-weight: 400;
+    font-weight: 40px;
 }
 
 .item1 {
@@ -256,11 +285,27 @@
 }
 
 .edit,
-.delete,
+.delete{
+    width: 15%;
+    height: 30vh;
+    margin-left: -3%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 1%;
+    border-radius: 25px;
+    border: 2px solid rgba(0, 53, 108, 1);
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: white;
+    cursor: pointer;
+    box-shadow: 3px 0px 3px rgba(0, 0, 0, 0.25);
+}
+
 .editSelected {
-    width: 12%;
-    height: 25vh;
-    margin-left: -4%;
+    width: 8%;
+    height: 10vh;
+    margin-left: -3%;
     padding-top: 2%;
     padding-bottom: 2%;
     padding-right: 1%;
@@ -281,11 +326,13 @@
 .selected {
     background-color: rgba(0, 53, 108, 1);
     cursor: default;
+    width: 10vh;
+    height: 40vh;
 }
 
 .editSelected {
-    height: 31vh;
-    width: 9.3%;
+    height: 40vh;
+    width: 8%;
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
@@ -298,10 +345,10 @@
 
 .editConfirm,
 .editCancel {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     display: flex;
-    padding-right: 12%;
+    padding-right: 20%;
     align-items: center;
     justify-content: flex-end;
 }
@@ -312,8 +359,8 @@
 }
 
 .editCancel {
-border-top-right-radius: 23px;
-background-color: #ff0000;
+    border-top-right-radius: 23px;
+    background-color: #ff0000;
 }
 
 .delete {
@@ -321,12 +368,12 @@ z-index: 0;
 }
 
 .select {
-margin-left: 2%;
-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-width: 20%;
-margin-right: 0;
-font-weight: 500;
-font-size: 1.2vw;
+    margin-left: 2%;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+    width: 20%;
+    margin-right: 0;
+    font-weight: 500;
+    font-size: 1.2vw;
 }
 
 .input {
@@ -341,6 +388,7 @@ font-size: 1.2vw;
     border: none;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
     color: rgba(0, 53, 108, 1);
+    margin-left: 25px;
 }
 
 .inputTitulo {
@@ -355,6 +403,14 @@ font-size: 1.2vw;
     border: none;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
     color: rgba(0, 53, 108, 1);
+}
+
+.descriptionTitle{
+    color: rgba(0, 53, 108, 1);
+    font-family: sans-serif, "Manrope";
+    font-weight: bolder;
+    font-size: 1.5vw;
+    margin-top: 10px;
 }
 
 .inputDescription {
@@ -373,6 +429,7 @@ font-size: 1.2vw;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
     color: rgba(0, 53, 108, 1);
     resize: none;
+    margin-top: 10px;
 }
 
 .input:focus,
