--- a/src/Styles/Proyectos/Proyectos.module.css
+++ b/src/Styles/Proyectos/Proyectos.module.css
@@ -1,7 +1,7 @@
 .proyectosContainer {
 	width: 100%;
 	font-family: sans-serif, "Manrope";
-	text-align: center;
+	/* text-align: center; */
 	font-size: 4vw;
 	color: rgba(0, 53, 108, 1);
 	font-weight: bolder;
@@ -9,13 +9,11 @@
 	flex-direction: column;
 	align-items: center;
 	/* justify-content: flex-start; */
-	
 }
 
 .proyectosContainer::-webkit-scrollbar {
     width: 1px;
-  }
-
+}
 
 .projects {
 	width: 100%;
@@ -55,10 +53,11 @@
 	justify-content: center;
 	cursor: pointer;
 }
-  
+
 .addButton:hover{
-	background: rgba(0, 80, 200, 1);
-	box-shadow: rgba(0, 80, 200, 1);
+	background: rgba(0, 53, 154, 0.7);
+	box-shadow: rgba(0, 53, 154, 0.7);
+	border: white;
 }
 
 @keyframes cross {
@@ -79,6 +78,12 @@
 	rotate: 45deg;
 	animation: cross 400ms;
 }
+
+.clicked:hover {
+	background-color: white;
+	border: 2px solid rgba(0, 53, 108, 1);
+}
+
   
 .options {
 	width: 15%;
@@ -131,4 +136,5 @@
 .link:focus {
 	color: rgba(0, 53, 108, 1);
 }
+
   
