--- a/src/Styles/Soporte/Ticket.module.css
+++ b/src/Styles/Soporte/Ticket.module.css
@@ -247,6 +247,10 @@
   cursor: pointer;
 }
 
+.tarea:hover {
+  background-color: rgb(23, 86, 152);
+}
+
 .tareaSelect {
   width: 100%;
   color: rgba(0, 53, 108, 1);
