Rediseñada la pagina de cargas de horas

--- a/src/Styles/RecursosHumanos/BarraInformacion.css
+++ b/src/Styles/RecursosHumanos/BarraInformacion.css
@@ -69,10 +69,9 @@
 .add-button-container p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: rgba(255, 255, 255, 0);
-    display: none;
     font-size: 18px;
     width: 20%;
-    
+    transition: all 0.5s;
 }
 
 .add-button-container:hover{
@@ -89,7 +88,8 @@
     color: white;
     font-size: 40px;
     position: absolute;
-    right: 3px;
+    right: 5%;
+    top: 10%;
     width: 70px;
     border-radius: 50px;
     cursor: pointer;
