--- a/src/Styles/RecursosHumanos/Cargas.css
+++ b/src/Styles/RecursosHumanos/Cargas.css
@@ -2,6 +2,140 @@
     display: none;
 }
 
+.body-hours{
+    width: 95%;
+    margin-top: 20px;
+    cursor: default;
+}
+
+.horas-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:  rgb(0, 53, 108);
+    height: 50px;
+    padding: 1%;
+    border-radius: 30px;
+    width: 200px;
+}
+
+.horas-title p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.add-hours-button{
+    background-color: rgb(173, 173, 173);
+    width: 55px;
+    height: 55px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.603);
+}
+
+.add-hours-button p{
+    color: white;
+    font-size: 120px;
+    margin: 0;
+    margin-bottom: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.carga-main{
+    margin-top: 30px;
+    margin-left: 3%;
+}
+
+.carga-element,
+.sub-div-loader{
+    display: flex;
+    align-items: center;
+}
+
+.calendar,
+.project-task,
+select,
+input
+{
+    width: 230px;
+    margin-left: 30px;
+    background-color: rgb(222, 222, 222);
+    border: 2px solid rgb(0, 53, 108);
+    height: 55px;
+    border-radius: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+
+.buttons-div{
+    position: fixed;
+    bottom: 7%;
+    right: 4%;
+    width: 235px;
+    height: 267px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.button{
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 60px;
+    padding: 3%;
+    box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.603);
+}
+
+.button p{
+    text-align: center;
+    width: 65%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
+}
+
+.button img{
+    width: 18%;
+}
+
+.verificar,
+.bborrador,
+.cancelar{
+    cursor: pointer;
+}
+
+.verificar{
+    background-color: rgb(226, 219, 55);
+}
+
+.bborrador{
+    background-color: rgb(137, 156, 175);
+}
+
+.cancelar{
+    background-color: rgb(248, 109, 109);
+}
+
+.verificar:hover{
+    background-color: rgb(190, 186, 45);
+}
+
+.bborrador:hover{
+    background-color: rgb(115, 130, 146);
+}
+
+.cancelar:hover{
+    background-color: rgb(207, 90, 90);
+}
+
+/*
 .div-container .div-section{
     margin-top: 3%;
     display: flex;
@@ -109,3 +243,24 @@ select{
 .cancelar:hover{
     background-color: rgb(228, 115, 115);
 }
+
+.cargas-main{
+    margin-top: 20px;
+    margin-left: 22%;
+    margin-bottom: 3%;
+    width: 70%;
+}
+
+.horas-title{
+    background-color:  rgb(0, 53, 108);
+    height: min-content;
+    padding: 1%;
+    border-radius: 30px;
+}
+
+.horas-title p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    font-size: 32px;
+    font-weight: 500;
+}*/
