--- a/src/Styles/Soporte/ErrorPage.module.css
+++ b/src/Styles/Soporte/ErrorPage.module.css
@@ -1,20 +1,14 @@
 .errorContainer {
-  width: 60vw;
+  width: 60%;
   height: 50vh;
-  background-color: rgba(0, 53, 108, 1);
-  position: absolute;
-  top: 25%;
-  left: 25%;
-  border-radius: 25px;
-  z-index: 1000;
-  box-shadow: 2px 2px 9px rgba(0, 0, 0, 0.75);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  text-align: center;
 }
 
 .error {
   font-size: 2vw;
-  color: white;
+  color: rgba(0, 53, 108, 1);
 }
