--- a/src/Styles/Proyectos/Project.module.css
+++ b/src/Styles/Proyectos/Project.module.css
@@ -269,6 +269,7 @@
 .item2 {
     z-index: 9;
 }
+
 .item3 {
     z-index: 8;
     font-size: 10.5pt;
@@ -280,6 +281,10 @@
 
 .item5 {
     z-index: 6;
+}
+
+.widthCompleto{
+    width:100%;
 }
 
 .tarea {
@@ -678,4 +683,19 @@ background-color: rgb(23, 86, 152);
     background: #ffffff;
     border-radius: 18px;
     border: 1px solid #cfcece;
+}
+
+
+.projectTaskContainer {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
