--- a/src/Styles/RecursosHumanos/Reportes.css
+++ b/src/Styles/RecursosHumanos/Reportes.css
@@ -1,4 +1,11 @@
 .body{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.options-container{
     display: flex;
     width: 96%;
     margin-top: 1%;
@@ -34,14 +41,16 @@
 
 .options-div{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 32px;
+    font-size: 24px;
 }
 
 .option-section{
     border: 2px solid rgb(132, 160, 190);
     border-radius: 15px;
-    padding: 1.5%;
+    padding: 0 1.5%;
     margin-bottom: 1%;
+    display: flex;
+    align-items: center;
 }
 
 .option-section:first-of-type p{
@@ -54,13 +63,122 @@
     width: 45%;
 }
 
+.date-div p{
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
 .date-div input{
     background-color: rgb(222, 222, 222);
-    padding: 2%;
+    
     border-radius: 15px;
-    width: 60%;
     text-align: center;
     color: rgb(79, 79, 79);
     width: 30%;
+}
+
+.report-select{
+    width: 230px;
+    margin-left: 30px;
+    background-color: rgb(222, 222, 222);
+    border: 2px solid rgb(0, 53, 108);
+    height: 55px;
+    border-radius: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+}
+
+.report-table{
+    margin-top: 80px;
+    background-color: red;
+    width: 90%;
+}
+
+.report-table-header,
+.report-table-element{
+    display: flex;
+    justify-content: space-around;
+}
+
+.report-table-header div,
+.report-table-element div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 21%;
+    background-color: green;
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+.report-grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 90%;
+    margin-top: 80px;
+}
+
+.report-grid div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    background-color: rgb(238, 238, 238);
+    height: 30px;
+    margin-bottom: 10px;
+    margin-left: 10%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
+
+.type-task-grid{
+    grid-column: 1;
+}
+
+.task-grid{
+    grid-column: 2;
+}
+
+.time-grid{
+    grid-column: 3;
+}
+
+.total-time-grid{
+    grid-column: 4;
+}
+
+.type-task-grid:nth-child(1),
+.task-grid:nth-of-type(2),
+.time-grid:nth-of-type(3),
+.total-time-grid:nth-of-type(4){
+    background-color: rgb(0, 53, 108);
+    color: white;
+}
+
+@media (max-width: 1430px){
+    .report-title p{
+        font-size: 30px;
+    }
+
+    .report-title img{
+        width: 60px;
+    }
+
+    .option-section p{
+        font-size: 16px;
+        word-wrap: break-word;
+    }
+
+    
+    .date-div input{
+        height: 30px;
+    }
+
+    .report-select{
+        width: 230px;
+        margin-left: 30px;
+        height: 35px;
+        font-size: 15px;
+    }
 }
