--- a/src/Styles/RecursosHumanos/Workers.css
+++ b/src/Styles/RecursosHumanos/Workers.css
@@ -38,3 +38,12 @@
     border-radius: 5px;
     margin-top: 10px;
 }
+
+.loading {
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
