--- a/src/Styles/RecursosHumanos/Tareas.css
+++ b/src/Styles/RecursosHumanos/Tareas.css
@@ -13,6 +13,10 @@ body{
     display: flex;
 }
 
+.task-element-main-container{
+    max-width: 80vh;
+}
+
 .hours-section-container{
     border: 4px solid rgb(0, 53, 108);
     border-radius: 30px;
@@ -45,6 +49,8 @@ body{
     border-top: 2px solid rgb(0, 53, 108);
     border-bottom: 2px solid rgb(0, 53, 108);
     margin-left: 2%;
+    overflow-x: scroll;
+    
 }
 
 .task-element-container:first-of-type{
@@ -55,12 +61,14 @@ body{
 }
 
 .task-element{
-    width: 180px;
+    width: 150px;
     height: 160px;
     padding: 0 1%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    margin: 0 1%;
+    border-right: rgb(210, 210, 210) 4px solid;
 }
 
 .task-name p{
@@ -78,12 +86,16 @@ body{
     font-weight: 700;
 }
 
-.sub-task-element{
-    margin-top: -10%;
-    height: 100%;
+.sub-task-element,
+.sub-task-great-element{
+    
+    width: 150px;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+
+    
 }
 
 .sub-task-empty-element p{
@@ -94,22 +106,6 @@ body{
     width: 20px;
     height: 20px;
     border-radius: 10px;
-}
-
-.grey{
-    background-color: rgb(164, 162, 159)
-}
-
-.yellow{
-    background-color: rgb(227, 238, 100);
-}
-
-.green{
-    background-color: rgb(47, 249, 79);
-}
-
-.orange{
-    background-color: rgb(255, 153, 0);
 }
 
 .hours-amount{
@@ -153,7 +149,7 @@ body{
 
 .vertical-divisor{
     background-color: rgb(0, 53, 108);
-    width: 4px;
+    width: 10px;
     height: 8em;
     align-self: center;
 }
@@ -271,4 +267,21 @@ body{
 
 .edit-element{
     margin-bottom: 15px;
+}
+
+.sub-task-great-element{
+    background-color: rgb(203, 243, 254);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    color: rgb(0, 53, 108);
+    text-align: center;
+    border-radius: 15px;
+}
+
+.sub-task-great-element p{
+    margin-top: 5px;
+}
+
+.sub-task-great-element p:first-of-type{
+    font-weight: 700;
 }
