--- a/src/Styles/Proyectos/Tarea.module.css
+++ b/src/Styles/Proyectos/Tarea.module.css
@@ -6,21 +6,21 @@
     justify-content: flex-start;
   }
 
-  .tarea{
-  width: 30vh;
-  height: 30vh;
-  font-size: 2vw;
-  /* padding: 2%; */
-  border-radius: 25px;
-  border: 2px solid rgba(0, 53, 108, 1);
-  display: flex;
-  flex-direction: column;
-  /* justify-content: space-between; */
-  align-items: center;
-  background-color: white;
-  box-shadow: 3px 0px 3px rgba(0, 0, 0, 0.25);
-  z-index: 2;
-  margin:0%
+.tarea{
+    width: 30vh;
+    height: 30vh;
+    font-size: 2vw;
+    /* padding: 2%; */
+    border-radius: 25px;
+    border: 2px solid rgba(0, 53, 108, 1);
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    align-items: center;
+    background-color: white;
+    box-shadow: 3px 0px 3px rgba(0, 0, 0, 0.25);
+    z-index: 2;
+    margin:0%
 }
 
 .headerContainer {
@@ -33,24 +33,23 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    color: white
-  }
+    color: white;
+    font-size: 12pt;
+}
 
-  .descripcion{
+.descripcion{
     margin: auto;
     text-align: center;
     overflow-y: auto;
-    
-    
-  }
+}
 
-  .descripcion::-webkit-scrollbar {
+.descripcion::-webkit-scrollbar {
     width: 1px;
-  }
+}
 
-  .proyectoHeader {
+.proyectoHeader {
     width: 100%;
-    height: 250px;
+    height: 200px;
     padding-top: 1%;
     padding-bottom: 1%;
     display: flex;
@@ -58,11 +57,10 @@
     align-items: center;
     justify-content: space-around;
     color: rgba(0, 53, 108, 1);
-    font-size: 25px;
-    
-  }
+    font-size: 14pt;
+}
 
-  .bloqueHeader{
+.bloqueHeader{
     width: 100%;
     height: 100%;
     display: flex;
@@ -73,28 +71,28 @@
     text-align: left;
     justify-content: flex-start;
     overflow-y: auto;
-    
-  }
+}
 
-  .bloqueHeader::-webkit-scrollbar {
+.bloqueHeader::-webkit-scrollbar {
     width: 1px;
-  }
-  .seccionTareas{
+}
+
+.seccionTareas{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-  }
-  .columnaTareas{
+}
+
+.columnaTareas{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-  }
+}
 
 
   .titulo{
@@ -114,17 +112,18 @@
     justify-content: space-between;
   }
 
-  .linkRight {
+.linkRight {
     width: 5px;
     height: 80%;
     margin-right: 0;
     border-right: solid #ACC0D8 5px;
 }
 
-.linkTop {
-  
+.linkTop { 
   height: 1px;
   border-top: solid #ACC0D8 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .etiquetaTarea{
@@ -273,4 +272,8 @@
 
 .titulo{
   padding-left: 5%;
+}
+
+.backButton:hover{
+  filter:drop-shadow(3px 3px 3px rgba(0, 53, 154, 0.7));
 }
