changes Co-authored-by: kamalhosain <kamalhosain@users.noreply.github.com> Co-authored-by: José Chávez <EduardoCh93@users.noreply.github.com> Co-authored-by: AlanCristianGoyzueta <alanlata@gmail.com> Co-authored-by: Ignacio Pereyra <N4ch1Nh0@users.noreply.github.com>

--- a/src/Styles/Proyectos/Proyectos.module.css
+++ b/src/Styles/Proyectos/Proyectos.module.css
@@ -11,6 +11,15 @@
 	/* justify-content: flex-start; */
 }
 
+.loading {
+	width: 100%;
+	height: 85vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: white;
+}
+
 .proyectosContainer::-webkit-scrollbar {
     width: 1px;
 }
