--- a/src/Styles/Proyectos/Project.module.css
+++ b/src/Styles/Proyectos/Project.module.css
@@ -699,3 +699,44 @@ background-color: rgb(23, 86, 152);
     align-items: center;
     justify-content: center;
 }
+
+.proyectoHeader {
+    width: 100%;
+    height: 200px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    color: rgba(0, 53, 108, 1);
+    font-size: 14pt;
+}
+
+.bloqueHeader{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
+    text-align: left;
+    justify-content: flex-start;
+    overflow-y: auto;
+}
+
+.bloqueHeader::-webkit-scrollbar {
+    width: 1px;
+}
+
+.titulo{
+    font-size: 20pt;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 40px;
+}  
+.backButton:hover{
+    filter:drop-shadow(3px 3px 3px rgba(0, 53, 154, 0.7));
+  }
