--- a/src/Styles/Proyectos/Tarea.module.css
+++ b/src/Styles/Proyectos/Tarea.module.css
@@ -20,12 +20,13 @@
     background-color: white;
     box-shadow: 3px 0px 3px rgba(0, 0, 0, 0.25);
     z-index: 2;
-    margin:0%
+    margin:0%;
+   
 }
 
 .headerContainer {
     width: 100%;
-    height: 7vh;
+    height: 20%;
     margin: 0;
     border-radius: 22px;
     background-color: rgba(0, 53, 108, 1);
@@ -35,12 +36,15 @@
     justify-content: space-around;
     color: white;
     font-size: 12pt;
+    
 }
 
 .descripcion{
     margin: auto;
     text-align: center;
-    overflow-y: auto;
+    overflow-y:auto;
+    width: 100%;
+    max-height: 80%;
 }
 
 .descripcion::-webkit-scrollbar {
@@ -271,7 +275,11 @@
 }
 
 .titulo{
-  padding-left: 5%;
+  font-size: 20pt;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
 }
 
 .backButton:hover{
