--- a/src/Styles/Proyectos/Tarea.module.css
+++ b/src/Styles/Proyectos/Tarea.module.css
@@ -1,3 +1,17 @@
+.tareaContainerPrincipal {
+  width: 100%;
+  height: 85vh;
+  font-family: sans-serif, "Manrope";
+  text-align: center;
+  font-size: 3vw;
+  color: rgba(0, 53, 108, 1);
+  font-weight: bolder;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+
 .tareaContainer {
     width: 100%;
     display: flex;
@@ -6,97 +20,7 @@
     justify-content: flex-start;
   }
 
-.tarea{
-    width: 30vh;
-    height: 30vh;
-    font-size: 2vw;
-    /* padding: 2%; */
-    border-radius: 25px;
-    border: 2px solid rgba(0, 53, 108, 1);
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    align-items: center;
-    background-color: white;
-    box-shadow: 3px 0px 3px rgba(0, 0, 0, 0.25);
-    z-index: 2;
-    margin:0%;
-   
-}
 
-.headerContainer {
-    width: 100%;
-    height: 20%;
-    margin: 0;
-    border-radius: 22px;
-    background-color: rgba(0, 53, 108, 1);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    color: white;
-    font-size: 12pt;
-    
-}
-
-.descripcion{
-    margin: auto;
-    text-align: center;
-    overflow-y:auto;
-    width: 100%;
-    max-height: 80%;
-}
-
-.descripcion::-webkit-scrollbar {
-    width: 1px;
-}
-
-.proyectoHeader {
-    width: 100%;
-    height: 200px;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    color: rgba(0, 53, 108, 1);
-    font-size: 14pt;
-}
-
-.bloqueHeader{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    padding-top: 1%;
-    padding-left: 2%;
-    padding-right: 2%;
-    text-align: left;
-    justify-content: flex-start;
-    overflow-y: auto;
-}
-
-.bloqueHeader::-webkit-scrollbar {
-    width: 1px;
-}
-
-.seccionTareas{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.columnaTareas{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 
   .titulo{
@@ -284,4 +208,13 @@
 
 .backButton:hover{
   filter:drop-shadow(3px 3px 3px rgba(0, 53, 154, 0.7));
+}
+
+.loading {
+  width: 100%;
+  height: 85vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
 }
