--- a/src/Styles/RecursosHumanos/Cargas.css
+++ b/src/Styles/RecursosHumanos/Cargas.css
@@ -28,7 +28,7 @@
 
 .add-hours-button{
     background-color: rgb(173, 173, 173);
-    width: 55px;
+    min-width: 55px;
     height: 55px;
     border-radius: 50px;
     display: flex;
@@ -46,6 +46,8 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+
+
 .carga-main{
     margin-top: 30px;
     margin-left: 3%;
@@ -55,6 +57,7 @@
 .sub-div-loader{
     display: flex;
     align-items: center;
+    /*margin-top: 30px;*/
 }
 
 .calendar,
