--- a/src/Styles/Proyectos/Tarea.module.css
+++ b/src/Styles/Proyectos/Tarea.module.css
@@ -166,7 +166,7 @@
   padding-right: 2%;
   justify-content: center;
   text-align: left;
-  font-size: 25px;
+  font-size: 14pt;
 }
 
 .personasAsignadas{
@@ -178,10 +178,11 @@
   font-size: 25px;
   background-color: #bebebe;
   padding: 1%;
+  border-radius: 10px;
 }
 
 .descripcionTareas{
-  width: 60%;
+  width: 85%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -189,7 +190,7 @@
   justify-content: flex-start;
   padding:1%;
   font-size: 25px;
-  background-color: #f7efef;
+  background-color: #ffffff;
 }
 
 .titleAndBBcontainer{
