--- a/src/Styles/RecursosHumanos/Tareas.css
+++ b/src/Styles/RecursosHumanos/Tareas.css
@@ -1,287 +1,285 @@
-body{
-    overflow-x: hidden;
+body {
+  overflow-x: hidden;
 }
 
-#main{
-    margin-top: 20px;
-    margin-left: 22%;
-    margin-bottom: 3%;
-    width: 70%;
+#main {
+  margin-top: 20px;
+  margin-left: 22%;
+  margin-bottom: 3%;
+  width: 70%;
 }
 
-.hours-section{
-    display: flex;
+.hours-section {
+  display: flex;
 }
 
-.task-element-main-container{
-    max-width: 80vh;
+.task-element-main-container {
+  max-width: 80vh;
 }
 
-.hours-section-container{
-    border: 4px solid rgb(0, 53, 108);
-    border-radius: 30px;
-    display: flex;
-    width: fit-content;
-    margin-top: 2%;
+.hours-section-container {
+  border: 4px solid rgb(0, 53, 108);
+  border-radius: 30px;
+  display: flex;
+  width: fit-content;
+  margin-top: 2%;
 }
 
-.border-task-start{
-    background-color: rgb(0, 53, 108);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px 0 0 20px;
-    width: 40px;
+.border-task-start {
+  background-color: rgb(0, 53, 108);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px 0 0 20px;
+  width: 40px;
 }
 
-.border-task-start p{
-    color: white;
-    transform: rotate(270deg);
-    text-align: center;
+.border-task-start p {
+  color: white;
+  transform: rotate(270deg);
+  text-align: center;
 }
 
-.border-task-end{
-    width: 50px;
+.border-task-end {
+  width: 50px;
 }
 
-.task-element-container{
-    display: flex;
-    border-top: 2px solid rgb(0, 53, 108);
-    border-bottom: 2px solid rgb(0, 53, 108);
-    margin-left: 2%;
-    overflow-x: scroll;
-    
+.task-element-container {
+  display: flex;
+  border-top: 2px solid rgb(0, 53, 108);
+  border-bottom: 2px solid rgb(0, 53, 108);
+  margin-left: 2%;
+  overflow-x: scroll;
 }
 
-.task-element-container:first-of-type{
-    border-top: none;
+.task-element-container:first-of-type {
+  border-top: none;
 }
-.task-element-container:last-of-type{
-    border-bottom: none;
-}
-
-.task-element{
-    width: 150px;
-    height: 160px;
-    padding: 0 1%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 0 1%;
-    border-right: rgb(210, 210, 210) 4px solid;
+.task-element-container:last-of-type {
+  border-bottom: none;
 }
 
-.task-name p{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:rgb(0, 53, 108);
-    font-size: 18px;
+.task-element {
+  width: 150px;
+  height: 160px;
+  padding: 0 1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 1%;
+  border-right: rgb(210, 210, 210) 4px solid;
 }
 
-.task-name-div{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 2em;
-    margin-top: 5%;
-    font-weight: 700;
+.task-name p {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(0, 53, 108);
+  font-size: 18px;
+}
+
+.task-name-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 2em;
+  margin-top: 5%;
+  font-weight: 700;
 }
 
 .sub-task-element,
-.sub-task-great-element{
-    
-    width: 150px;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-
-    
+.sub-task-great-element {
+  width: 150px;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-.sub-task-empty-element p{
-    text-align: center;
+.sub-task-empty-element p {
+  text-align: center;
 }
 
-.status-dot{
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+.status-dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
 }
 
-.hours-amount{
-    margin: 0.5em 0;
+.hours-amount {
+  margin: 0.5em 0;
 }
 
-.buttons-work-div{
-    display: flex;
-    justify-content: space-between;
-
+.buttons-work-div {
+  display: flex;
+  justify-content: space-between;
 }
 
 .edit-button,
-.delete-button{
-    border: 2px solid rgb(0, 53, 108);
-    border-radius: 20px;
-    width: 45%;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
+.delete-button {
+  border: 2px solid rgb(0, 53, 108);
+  border-radius: 20px;
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .edit-button p,
-.delete-button p{
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.delete-button p {
+  margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.edit-button{
-    color: rgb(0, 53, 108);
+.edit-button {
+  color: rgb(0, 53, 108);
 }
 
-.delete-button{
-    background-color: rgb(0, 53, 108);
+.delete-button {
+  background-color: rgb(0, 53, 108);
 }
 
-.delete-button p{
-    color: white;
+.delete-button p {
+  color: white;
 }
 
-
-.vertical-divisor{
-    background-color: rgb(0, 53, 108);
-    width: 10px;
-    height: 8em;
-    align-self: center;
+.vertical-divisor {
+  background-color: rgb(0, 53, 108);
+  width: 10px;
+  height: 8em;
+  align-self: center;
 }
 
-.border-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 3%;
-    margin-top: 2%;
-    border-right: 4px solid rgb(0, 53, 108);
-    border-top: 4px solid rgb(0, 53, 108);
-    border-bottom: 4px solid rgb(0, 53, 108);
-    border-radius: 0 35px 35px 0;
-    margin-left: -25px;
-    cursor: pointer;
-    min-width: 40px;
+.border-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3%;
+  margin-top: 2%;
+  border-right: 4px solid rgb(0, 53, 108);
+  border-top: 4px solid rgb(0, 53, 108);
+  border-bottom: 4px solid rgb(0, 53, 108);
+  border-radius: 0 35px 35px 0;
+  margin-left: -25px;
+  cursor: pointer;
+  width: 40px;
 }
 
-.border-button img{
-    margin-left: 70%;
-    max-width: 100%;
+.border-button img {
+  margin-left: 70%;
+  max-width: 100%;
 }
 
 .task-name-edit,
-.hours-amount-edit{
-    width: 120px;
+.hours-amount-edit {
+  width: 120px;
 }
 
-#edit{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100%;
+#edit {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
 }
 
-.not-clickeable{
-    position: fixed;
-    top: 20%;
-    left: 33%;
-    background-color: white;
-    width: 50%;
-    height: 70%;
-    border: rgb(0, 53, 108) 2px solid;
-    border-radius: 10px;
-    filter: drop-shadow(0px 3px 100px rgba(0, 0, 0, 0.459));
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+.not-clickeable {
+  position: fixed;
+  top: 20%;
+  left: 33%;
+  background-color: white;
+  width: 50%;
+  height: 70%;
+  border: rgb(0, 53, 108) 2px solid;
+  border-radius: 10px;
+  filter: drop-shadow(0px 3px 100px rgba(0, 0, 0, 0.459));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.edit-title{
-    background-color: rgb(0, 53, 108);
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    margin: 20px;
-    width: 200px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: default;
+.edit-title {
+  background-color: rgb(0, 53, 108);
+  color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  margin: 20px;
+  width: 200px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: default;
 }
 
-.edit-title p{
-    margin: 0.5em;
-    font-size: 28px;
+.edit-title p {
+  margin: 0.5em;
+  font-size: 28px;
 }
 
 .edit-container div,
-.edit-button-container{
-    display: flex;
+.edit-button-container {
+  display: flex;
 }
 
 .edit-container p,
-.edit-input{
-    width: 50%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.edit-input {
+  width: 50%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.edit-button-container{
-    justify-content: space-between;
-    width: 60%;
-    margin-bottom: 3%;
+.edit-button-container {
+  justify-content: space-between;
+  width: 60%;
+  margin-bottom: 3%;
 }
 
 .edit-cancel-button,
-.edit-save-button{
-    width: 200px;
-    color: white;
-    text-align: center;
-    border-radius: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.459));
-    cursor: pointer;
+.edit-save-button {
+  width: 200px;
+  color: white;
+  text-align: center;
+  border-radius: 30px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.459));
+  cursor: pointer;
 }
 
 .edit-cancel-button p,
-.edit-save-button p{
-    margin: 8px;
+.edit-save-button p {
+  margin: 8px;
 }
 
-.edit-cancel-button{
-    background-color: rgb(248, 109, 109);
+.edit-cancel-button {
+  background-color: rgb(248, 109, 109);
 }
 
-.edit-save-button{
-    background-color: rgb(29, 204, 46);
+.edit-save-button {
+  background-color: rgb(29, 204, 46);
 }
 
-.edit-element{
-    margin-bottom: 15px;
+.edit-element {
+  margin-bottom: 15px;
 }
 
-.sub-task-great-element{
-    background-color: rgb(203, 243, 254);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    color: rgb(0, 53, 108);
-    text-align: center;
-    border-radius: 15px;
+.sub-task-great-element {
+  background-color: rgb(203, 243, 254);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  color: rgb(0, 53, 108);
+  text-align: center;
+  border-radius: 15px;
 }
 
-.sub-task-great-element p{
-    margin-top: 5px;
+.sub-task-great-element p {
+  margin-top: 5px;
 }
 
-.sub-task-great-element p:first-of-type{
-    font-weight: 700;
+.sub-task-great-element p:first-of-type {
+  font-weight: 700;
+}
+
+.display-none {
+  display: none;
 }
