--- a/src/Styles/Soporte/Reportes.module.css
+++ b/src/Styles/Soporte/Reportes.module.css
@@ -130,8 +130,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  text-decoration: none;
-  color: rgba(0, 53, 108, 1);
+  text-decoration: none !important;
+  color: rgba(0, 53, 108, 1) !important;
 }
 
 .noTickets {
