--- a/src/Styles/Soporte/Ticket.module.css
+++ b/src/Styles/Soporte/Ticket.module.css
@@ -76,7 +76,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   font-weight: bolder;
 }
 
@@ -94,6 +94,11 @@
   margin-left: 2%;
   margin-bottom: 1%;
   font-weight: bolder;
+}
+
+.titleTicket {
+  max-width: 75%;
+  text-align: justify;
 }
 
 .type {
@@ -324,7 +329,7 @@
 .select {
   margin-left: 2%;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-  width: 51%;
+  width: 20%;
   margin-right: 0;
   font-weight: 500;
   font-size: 1.2vw;
@@ -334,7 +339,8 @@
   padding-top: 1%;
   padding-bottom: 1%;
   padding-left: 2%;
-  width: 20%;
+  padding-right: 2%;
+  width: 54%;
   font-family: sans-serif, "Manrope";
   font-size: 1.3vw;
   font-weight: bolder;
