--- a/src/Styles/Proyectos/Proyectos.module.css
+++ b/src/Styles/Proyectos/Proyectos.module.css
@@ -108,6 +108,14 @@
 	right: 9%;
 	z-index: 10;
 }
+
+.noProjects {
+	width: 100%;
+	height: 75vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
   
 @keyframes openOptions {
 	from {
