Generar reportes por trabajador funcionando

--- a/src/Styles/RecursosHumanos/Reportes.css
+++ b/src/Styles/RecursosHumanos/Reportes.css
@@ -163,8 +163,8 @@ tr:first-of-type{
 
 .generarButton{
     cursor: pointer;
+    height: 36px;
 }
-
 .generarButton:active{
     background-color: rgb(189, 189, 189);
 
