--- a/src/Styles/Proyecto.module.css
+++ b/src/Styles/Proyecto.module.css
@@ -20,6 +20,17 @@
   background-color: white;
 }
 
+.numTask {
+  border: 1px solid rgba(0, 53, 108, 1);
+  background-color: rgba(17, 76, 139,1);
+  color: white;
+  border-radius: 0% 0% 50% 50%;
+  width: 40%;
+  height: 10%;
+  margin-top: -1px;
+  padding-top: 2px;
+}
+
 .proyectoHeader {
     width: 100%;
     height: 200px;
@@ -164,7 +175,7 @@
   width: 100%;
   height: 7vh;
   margin: 0;
-  border-radius: 20px;
+  border-radius: 20px 20px 0px 0px;
   background-color: rgba(0, 53, 108, 1);
   display: flex;
   flex-direction: row;
