--- a/src/Styles/RecursosHumanos/RecursosHumanos.css
+++ b/src/Styles/RecursosHumanos/RecursosHumanos.css
@@ -1,12 +1,13 @@
 .recursos-humanos-container{
-    background-color: rgb(211, 224, 238);
+    /*background-color: rgb(211, 224, 238);*/
     border-radius: 30px;
     filter: drop-shadow(1px 2px 2px rgba(0, 0, 0, 0.11));
     position: fixed;
     top: 20%;
     width: 37%;
     height: 74%;
-    
+    border: 4px solid rgb(0, 53, 108);
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .trabajadores{
@@ -95,7 +96,7 @@
 .recursos-button{
     font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
     margin: 5% 10% 0;
-    background-color: rgb(233,239,246);
+    background-color: rgb(255, 255, 255);
     font-size: 30px;
     height: 3em;
     word-wrap: normal;
@@ -121,7 +122,7 @@
 }
 
 .recursos-button:hover{
-    background-color: rgb(190, 187, 218);
+    background-color: rgb(218, 218, 218);
     cursor: pointer;
 }
 
